--- a/BackgroundLogic.tex
+++ b/BackgroundLogic.tex
@@ -204,10 +204,10 @@ derivation & term \\ \hline
 
 
 \end{mydef}
-
-Minlog also allows for the use of the ex-falso q rule in order to perform proofs by contradiction. Such proof do not contain any computational content and it is typically used to prove properties about computations that never executed by the program.\\
 \medskip
-\begin{mydef}[The EFQ rule] \hspace*{0pt} \\
+Minlog also allows for the use of the \emph{ex falso quodlibet} rule in order to perform proofs by contradiction. Such proof do not contain any computational content and it is typically used to prove properties about computations that never executed by the program.\\
+\medskip
+\begin{mydef}[The Ex Falso Quodlibet rule] \hspace*{0pt} \\
 \begin{center}
 \AxiomC{$\bot$}
 \LeftLabel{efq}
