--- a/EVDP.tex
+++ b/EVDP.tex
@@ -5,7 +5,7 @@ In the following chapter we present a proof of soundness and completeness for th
 
 \section{Related Work}
 %Other examples of verification and extraction of SAT solvers
-There is one previous project involving the use of program extraction to obtain decision procedures\cite{WK98}.  They give two constructive proofs of the decidability of intuitionistic propositional logic and extract two different programs from those proofs.  Both of them produce either a derivation of the formula in intuitionistic sequent calculus, or a Kripke counter-model. The second proof and program was performed in the Minlog system for the implication fragment.
+There is one previous project involving the use of program extraction to obtain decision procedures\cite{WK98}.  They give two constructive proofs of the decidability of intuitionistic propositional logic and extract two different programs from those proofs.  Both of them produce either a derivation of the formula in intuitionistic sequent calculus, or a Kripke counter-model. The second proof and program was performed in the Minlog system for the implicational fragment.
 %
 Several attempts have been made to integrate an automatic theorem prover into Coq. Most of this work has made use of Coq's program extraction facilities to extract programs from proofs of decision procedures.
  In \cite{SL08}, a SAT-solver based on the DPLL algorithm has been
