--- a/Introduction.tex
+++ b/Introduction.tex
@@ -111,3 +111,6 @@ Memory: & 8 GBs 1333 MHz DDR2 RAM \\ \hline
 Hard disk: &  750GB 7200 RPM  SATA\\  \hline 
 \end{tabular}
 \end{center}
+
+\section{Implementations}
+The Minlog implementations described in Chapters \ref{chapter:dpllminlog} and \ref{chapter:cdclproof} and Real Time Maude implementations described in \ref{chap:modelertms} and \ref{chap:verifyertms} are available at \url{http://cs.swan.ac.uk/~csal/phd/index}.
