--- a/Main.tex
+++ b/Main.tex
@@ -293,7 +293,7 @@ ${ \ } $ \vspace{4cm}
 \end{center}
 
 \begin{center}
-22nd July, 2014
+\today
 \end{center}
 
 \vspace{2.5cm}
@@ -336,7 +336,7 @@ and is not being currently submitted for any degree.
 
 \vspace{0.5cm}
 \begin{tabular}{l}
-June , 2014\\
+\today \\
 \\
 Signed:
 \end{tabular}
@@ -347,7 +347,7 @@ requirements for the degree of Doctor of Philosophy.
 
 \vspace{0.5cm}
 \begin{tabular}{l}
-June , 2014\\
+\today \\
 \\
 Signed:
 \end{tabular}
@@ -363,7 +363,7 @@ failure of this dissertation and the degree examination as a whole.
 
 \vspace{0.5cm}
 \begin{tabular}{l}
-June, 2014\\
+\today \\
 \\
 Signed:
 \end{tabular}
@@ -376,7 +376,7 @@ to be made available to outside organisations.
 
 \vspace{0.5cm}
 \begin{tabular}{l}
-February 18, 2011\\
+\today \\
 \\
 Signed:
 \end{tabular}
