--- a/ECLSA.tex
+++ b/ECLSA.tex
@@ -621,7 +621,7 @@ The inductive definition for the modified DPLL proof system inductively defines 
 )
 \end{lstlisting}
 
-The statement of completeness for the DPLL proof system has been modified from the one described in Theorem \ref{thm:moddpllcompleteness}. It additionally contains an assumption to allow for the inclusion of a more complicated branching heuristic (See lines 4-12 of Code Listing \ref{cl:moddpllcompleteness}.), which computes a variable ordering at the start of the program that is used throughout the proof search.  The assumption states that their exists a variable list \texttt{vs} that satisfies three properties in relation to the formula and the valuation during the proof search.  The first property (lines 5-7) states that every variable in the variable list which is not in the valuation must be contained in the variable set of the formula; we want to only select variables from the formula. The second property (lines 8-10) states that every variable in the formula but is not in the valuation must be in the variable list; our heuristic must compute an ordering containing every variable from the variable set of the formula.
+The statement of completeness for the DPLL proof system has been modified from the one described in Theorem \ref{thm:moddpllcompleteness}. It additionally contains an assumption to allow for the inclusion of a more complicated branching heuristic (See lines 4-12 of Code Listing \ref{cl:moddpllcompleteness}.), which computes a variable ordering at the start of the program that is used throughout the proof search.  The assumption states that their exists a variable list \texttt{vs} that satisfies three properties in relation to the formula and the valuation during the proof search.  The first property (lines 5-7) states that every variable in the variable list which is not in the valuation must be contained in the variable set of the formula; we want to only select variables from the formula. The second property (lines 8-10) states that every variable in the formula but is not in the valuation must be in the variable list; our heuristic must compute an ordering containing every variable from the variable set of the formula. The third property states that each variable has at most one occurrence in the list. The fourth property states that all of the literals in the valuation must be in the formula. It also contains assumptions regarding the structure of the formula and clauses. The assumptions  \texttt{WellFormed f} states that all clauses follow the structure described in Chapter \ref{sect:minlogprelim} and \texttt{funique} states that every clause in the formula is unique.
 
 \begin{lstlisting}[caption = The Completeness Theorem for the Modified DPLL Proof System in Minlog, label = cl:moddpllcompleteness]
 (set-goal (pf "all val,f.  
