--- a/minlogdpll.tex
+++ b/minlogdpll.tex
@@ -4,7 +4,7 @@
 \label{chapter:dpllminlog}
 In the following chapter we describe how the completeness proofs from Chapter \ref{chapter:dpll} are implemented in the Minlog system and how Minlog can be used to extract programs from these proofs.  This begins with the definition of preliminary data types and operations described in Chapter \ref{chapter:dpll} and is followed by the implementation of the soundness and completeness of the DPLL proof system in Minlog. A unique feature of the Minlog system, namely \emph{non-computational quantifiers}, have been used to remove redundant data and computations and obtain a more efficient extracted program. The performance and behaviour of the extracted program is analysed in Section \ref{section:dpllapp}. A detailed overview of the Minlog system can be found in the Minlog Reference Manual \cite{MinlogRef}.
 
-\section{Formalising Preliminaries in the Minlog System}
+\section{Formalising Preliminaries in the Minlog System}\label{sect:minlogprelim}
 We have tried to stay faithful to the definition of the fundamental data types described in chapter \ref{chapter:satbackground} and to this end have defined a number of data types as algebras in Minlog, including the variable, literal, valuation, clause and formula. The variable is defined using the command $\mathbf{add-alg}$ which adds an algebra named "variable " with one constructor "Variable" which takes a natural number and returns a variable.
 \begin{lstlisting}[caption = "Definition of a variable in Minlog"]
 (add-alg "variable" '("Variable" "nat => variable"))
