--- a/Introduction.tex
+++ b/Introduction.tex
@@ -40,15 +40,15 @@ The second result of this thesis is the modelling of the European Rail Traffic M
 \section{Publications}
 The follow is a list of publications that I have produced during my studies
 
-\textbf{Verification of Railway Interlockings in SCADE (extended abstract with Seisenberger), AVOCS 2010 \cite{Al10}} 
+\textbf{Verification of Railway Interlockings in SCADE (extended abstract with Seisenberger), AVOCS 2010 \cite{AL10}} 
 
-\textbf{Verification of Solid State Interlocking Programs (with Chadwick, James, Kanso, Moller, Roggenbach and Seisenberger), FM-Rail-BOK, \cite{}}
+\textbf{Verification of Solid State Interlocking Programs (with Chadwick, James, Kanso, Moller, Roggenbach and Seisenberger), FM-Rail-BOK, \cite{AL14a}}
 
-\textbf{Extracting a DPLL Algorithm (with Berger and Seisenberger), MFPS 2010, \cite{}}
+\textbf{Extracting a DPLL Algorithm (with Berger and Seisenberger), MFPS 2012, \cite{AL12}}
 
-\textbf{Extracting Verified Decision Procedures: DPLL and Resolution (with Berger, Nordval Forsberg and Seisenberger), LMCS accepted for publication \cite{})
+\textbf{Extracting Verified Decision Procedures: DPLL and Resolution (with Berger, Nordval Forsberg and Seisenberger), LMCS accepted for publication \cite{AL14b}}
 
-\textbf{Safety and Performance of the European Rail Traffic Management System: A Modelling and Verification Exercise in Real Time Maude (with Berger, Roggenbach and Seisenberger), WADT 2014 \cite{}}
+\textbf{Safety and Performance of the European Rail Traffic Management System: A Modelling and Verification Exercise in Real Time Maude (with Berger, Roggenbach and Seisenberger), WADT 2014 \cite{AL14c}}
 
 
 \section{Thesis Outline}
