--- a/lit.bib
+++ b/lit.bib
@@ -259,6 +259,17 @@
   timestamp = {2014.08.04}
 }
 
+@INPROCEEDINGS{AL14c,
+  author = {Berger, U. and Lawrence, A. and Roggenbach, M. and Seisenberger,
+	M.},
+  title = {Safety and Performance of the European Rail Traffic Management System:
+	A Modelling and Verification Exercise in Real Time Maude},
+  booktitle = {WADT 2014},
+  year = {2014},
+  owner = {andylawrence},
+  timestamp = {2014.08.24}
+}
+
 @ARTICLE{AL13c,
   author = {Berger, U. and Lawrence, A. and Seisenberger, M.},
   title = {Program Extraction in Action: A Verified Clause Learning {SAT} Algorithm},
@@ -1120,7 +1131,7 @@
 @ARTICLE{AL12,
   author = {Lawrence, A. and Berger, U. and Seisenberger, M.},
   title = {Extracting a {DPLL} Algorithm},
-  journal = {Electr.~Notes in Comp.~Sci.},
+  journal = {Electronic Notes in Theoretical Computer Science},
   year = {2012},
   volume = {286},
   pages = {243--256}
@@ -1130,6 +1141,17 @@
   author = {Lawrence, A. and Seisenberger, M.},
   title = {Formalising {ERTMS} using Hybrid Automata},
   journal = {In preparation}
+}
+
+@INPROCEEDINGS{AL10,
+  author = {Lawrence, A. and Seisenberger, M.},
+  title = {Verification of Railway Interlockings in SCADE},
+  booktitle = {AVOCS 2010},
+  year = {2010},
+  series = {Electronic Communications of the EASST},
+  publisher = {EASST},
+  owner = {andylawrence},
+  timestamp = {2014.08.24}
 }
 
 @INPROCEEDINGS{GL97,
@@ -1853,7 +1875,8 @@
 }
 
 @MISC{Scade,
-  note = {Scade, http://www.esterel-technologies.com}
+  note = {{SCADE}, \url{http://www.esterel-technologies.com} (Last Accessed
+	24/08/14)}
 }
 
 @MISC{Siemens,
